fix highlight spacing problem

--- a/src/routes/styles.scss
+++ b/src/routes/styles.scss
@@ -38,6 +38,8 @@
 
 code {
 	font-family: Fira Code;
+	line-height: 1.5rem;
+	vertical-align: bottom;
 }
 
 *::selection {
